--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -14,13 +14,13 @@ title = "Blowfish"
   # description = "My awesome website"
   # copyright = "Copy, _right?_ :thinking_face:"
 
-# [params.author]
-#   name = "Your name here"
-#   email = "youremail@example.com"
-#   image = "img/blowfish_logo.png"
-#   imageQuality = 96
-#   headline = "I'm only human"
-#   bio = "A little bit about you"
+[params.author]
+   name = "Johnski"
+#  email = "mail@example.com"
+   image = "https://avatars.githubusercontent.com/u/54713097?v=4"
+   imageQuality = 96
+   headline = "Smart phones, dumb people"
+   bio = "Working in IT during the day, fulltime superhero after hours."
 #   links = [
 #     { email = "mailto:hello@your_domain.com" },
 #     { link = "https://link-to-some-website.com/" },
