--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -16,46 +16,21 @@
   weight = 10
 
 [[main]]
-  name = "About"
+  name = "Videogames"
+  parent = "Blog"
+  pageRef = "posts/videogames"
+  weight = 10
+
+[[main]]
+  name = "Boardgames"
+  parent = "Blog"
+  pageRef = "posts/boardgames"
+  weight = 10
+
+[[main]]
+  name = "About me"
   pageRef = "about"
-  weight = 40
-
-#[[main]]
-#  name = "Parent"
-#  weight = 20
-
-#[[main]]
-#  name = "example sub-menu 1"
-#  parent = "Parent"
-#  pageRef = "posts"
-#  weight = 20
-
-#[[main]]
-#  name = "example sub-menu 2"
-#  parent = "Parent"
-#  pageRef = "posts"
-#  weight = 20
-
-#[[subnavigation]]
-#  name = "An interesting topic"
-#  pageRef = "tags/interesting-topic"
-#  weight = 10
-
-#[[subnavigation]]
-#  name = "My Awesome Category"
-#  pre = "github"
-#  pageRef = "categories/awesome"
-#  weight = 20
-
-#[[main]]
-#  name = "Categories"
-#  pageRef = "categories"
-#  weight = 20
-
-#[[main]]
-#  name = "Tags"
-#  pageRef = "tags"
-#  weight = 30
+  weight = 20
 
 
 # -- Footer Menu --
